# airpatrol

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
airpatrol/: __init__.py  api.py  const.py
tests/: test_api.py
